restored deleted entities just to be sure